// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration level setting level to none prevents decoration from being displayed 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`configuration level setting level to none prevents decoration from being displayed 2`] = `Array []`;

exports[`configuration level setting level to none prevents decoration from being displayed 3`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
]
`;

exports[`configuration level setting level to none prevents decoration from being displayed 4`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
  Array [
    "document2",
    Array [],
  ],
  Array [
    "document3",
    Array [],
  ],
]
`;

exports[`lifecycle event handling clears diagnostics on workspace.onDidCloseTextDocument 1`] = `undefined`;

exports[`lifecycle event handling processes new file on window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on window.onDidChangeActiveTextEditor 2`] = `
Array [
  Array [
    "document4",
    Array [
      Object {
        "message": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on workspace.onDidChangeTextDocument 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on workspace.onDidChangeTextDocument 2`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    Array [],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 2`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    Array [],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 3`] = `
Array [
  Array [
    "document2",
    Array [],
  ],
  Array [
    "document3",
    Array [],
  ],
]
`;

exports[`lifecycle event handling re-paints gremlins for already-processed file on window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle registration registers with window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidChangeConfiguration 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidChangeTextDocument 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidCloseTextDocument 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`updateDecorations clears decorations with a clean document 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations clears problems with a clean document 1`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
]
`;

exports[`updateDecorations shows left double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 左雙引號 (left double quotation mark) (Unicode U+201c)",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 0,
          },
          "right": Object {
            "char": 28,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows left double quotation mark in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 左雙引號 (left double quotation mark) (Unicode U+201c)",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 0,
          },
          "right": Object {
            "char": 28,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows multiple characters on multiple lines 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 3 個 段落分隔符 (paragraph separator) (Unicode U+2029)",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 3,
          },
          "right": Object {
            "char": 23,
            "line": 3,
          },
        },
      },
      Object {
        "hoverMessage": "此處有 3 個 不換行空格 (non breaking space) (Unicode U+00a0)",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 4,
          },
          "right": Object {
            "char": 22,
            "line": 4,
          },
        },
      },
      Object {
        "hoverMessage": "此處有 3 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 1,
          },
          "right": Object {
            "char": 20,
            "line": 1,
          },
        },
      },
      Object {
        "hoverMessage": "此處有 3 個 零寬不連字字元 (zero width non-joiner) (Unicode U+200c)",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 2,
          },
          "right": Object {
            "char": 25,
            "line": 2,
          },
        },
      },
      Object {
        "hoverMessage": "此處有 3 個 左雙引號 (left double quotation mark) (Unicode U+201c)",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 5,
          },
          "right": Object {
            "char": 30,
            "line": 5,
          },
        },
      },
      Object {
        "hoverMessage": "此處有 3 個 右雙引號 (right double quotation mark) (Unicode U+201d)",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 6,
          },
          "right": Object {
            "char": 31,
            "line": 6,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows multiple characters on multiple lines in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 3 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 1,
          },
          "right": Object {
            "char": 20,
            "line": 1,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
      Object {
        "message": "此處有 3 個 零寬不連字字元 (zero width non-joiner) (Unicode U+200c)",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 2,
          },
          "right": Object {
            "char": 25,
            "line": 2,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
      Object {
        "message": "此處有 3 個 段落分隔符 (paragraph separator) (Unicode U+2029)",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 3,
          },
          "right": Object {
            "char": 23,
            "line": 3,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
      Object {
        "message": "此處有 3 個 不換行空格 (non breaking space) (Unicode U+00a0)",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 4,
          },
          "right": Object {
            "char": 22,
            "line": 4,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "程式碼除妖鏡",
      },
      Object {
        "message": "此處有 3 個 左雙引號 (left double quotation mark) (Unicode U+201c)",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 5,
          },
          "right": Object {
            "char": 30,
            "line": 5,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
      Object {
        "message": "此處有 3 個 右雙引號 (right double quotation mark) (Unicode U+201d)",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 6,
          },
          "right": Object {
            "char": 31,
            "line": 6,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows non breaking space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 不換行空格 (non breaking space) (Unicode U+00a0)",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 0,
          },
          "right": Object {
            "char": 20,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows non breaking space in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 不換行空格 (non breaking space) (Unicode U+00a0)",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 0,
          },
          "right": Object {
            "char": 20,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows object replacement character 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 物件替換字元 (object replacement character) (Unicode U+fffc)",
        "range": Object {
          "left": Object {
            "char": 29,
            "line": 0,
          },
          "right": Object {
            "char": 30,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows object replacement character in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 物件替換字元 (object replacement character) (Unicode U+fffc)",
        "range": Object {
          "left": Object {
            "char": 29,
            "line": 0,
          },
          "right": Object {
            "char": 30,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows paragraph separator 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 段落分隔符 (paragraph separator) (Unicode U+2029)",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 0,
          },
          "right": Object {
            "char": 21,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows paragraph separator in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 段落分隔符 (paragraph separator) (Unicode U+2029)",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 0,
          },
          "right": Object {
            "char": 21,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows right double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 右雙引號 (right double quotation mark) (Unicode U+201d)",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 0,
          },
          "right": Object {
            "char": 29,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows right double quotation mark in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 右雙引號 (right double quotation mark) (Unicode U+201d)",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 0,
          },
          "right": Object {
            "char": 29,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows soft hyphen 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 軟連字號 (soft hyphen) (Unicode U+00ad)",
        "range": Object {
          "left": Object {
            "char": 12,
            "line": 0,
          },
          "right": Object {
            "char": 13,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows soft hyphen in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 軟連字號 (soft hyphen) (Unicode U+00ad)",
        "range": Object {
          "left": Object {
            "char": 12,
            "line": 0,
          },
          "right": Object {
            "char": 13,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width non-joiner 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬不連字字元 (zero width non-joiner) (Unicode U+200c)",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 0,
          },
          "right": Object {
            "char": 23,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width non-joiner in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 零寬不連字字元 (zero width non-joiner) (Unicode U+200c)",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 0,
          },
          "right": Object {
            "char": 23,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width space in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "此處有 1 個 零寬空格 (zero width space) (Unicode U+200b)",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "程式碼除妖鏡",
      },
    ],
  ],
]
`;
